--- a/CVM2B2025.HTML
+++ b/CVM2B2025.HTML
@@ -128,7 +128,7 @@
 </head>
 <body>
 
-<h1>HORÁRIO EF1 – 2ºB – TARDE 2025</h1>
+<h1>HORÁRIO EF1 – 2ºB – 2025</h1>
 
 <div id="controls">
     <button id="btnFull" onclick="showFullTable()">MOSTRAR TABELA COMPLETA</button>
@@ -287,3 +287,4 @@ document.addEventListener('contextmenu', e => {
 
 </body>
 </html>
+
